--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 
       <footer>
         This project is Coded by Yetunde Ajayi and it is
-        <a href="">Open source</a>
+        <a href="https://github.com/olayemiajayi/landing-page">Open source</a>
       </footer>
     </div>
   </body>
