--- a/index.html
+++ b/index.html
@@ -47,6 +47,10 @@
         font-style: italic;
         padding: 10px;
       }
+      footer a {
+        position: relative;
+        left: 8px;
+      }
       .container {
         background-color: #ffff;
         max-width: 40%;
@@ -190,7 +194,7 @@
       </script>
 
       <footer>
-        This project is Coded by Yetunde Ajayi and it is
+        Coded by Yetunde Ajayi and it is
         <a href="https://github.com/olayemiajayi/landing-page">Open source</a>
       </footer>
     </div>
